--- a/services/facade/internal/templates/home.html
+++ b/services/facade/internal/templates/home.html
@@ -1,8 +1,25 @@
 {% extends "base.html" %}
 
-{% block title %}Home - My FastAPI App{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>Welcome to My FastAPI App</h1>
-<p>This is the home page content.</p>
+
+<body style="font-family: 'Times New Roman', serif; line-height: 1.5;">
+    <div style="text-align: center; margin-bottom: 40px;">
+        <div style="font-size: 16pt; font-weight: bold; text-transform: uppercase; margin-bottom: 30px;">
+            выпускная квалификационная работа
+        </div>
+    </div>
+    
+    <div style="font-size: 14pt; font-weight: bold; text-align: center; margin: 40px 0;">
+        на тему<br>
+        "Разработка системы автоматизации обучения моделей машинного обучения"
+    </div>
+    
+    <div style="font-size: 14pt; margin-top: 100px; text-align: right;">
+        Студент<br>
+        <span style="text-decoration: underline;">Голованов Никита Андреевич</span>
+    </div>
+</body>
+
 {% endblock %}
