--- a/services/facade/internal/templates/includes/header.html
+++ b/services/facade/internal/templates/includes/header.html
@@ -2,9 +2,9 @@
 <header>
     <nav>
         <ul>
-            <li><a href="{{ url_for('home') }}">Home</a></li>
-            <li><a href="{{ url_for('datasets') }}">Datasets</a></li>
-            <li><a href="{{ url_for('models') }}">Models</a></li>
+            <li><a href="{{ url_for('home') }}">Главная</a></li>
+            <li><a href="{{ url_for('datasets') }}">Датасеты</a></li>
+            <li><a href="{{ url_for('models') }}">Модели</a></li>
         </ul>
     </nav>
 </header>
